ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.8.0-rc0
    • Affects Version/s: 2.7.6
    • Component/s: Geo
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Offending Code is in S2 library:

      src/third_party/s2/util/math/mathutil.h:153:45: error: absolute value function 'fabs' given an argument of type 'long double' but has
            parameter of type 'double' which may cause truncation of value [-Werror,-Wabsolute-value]
          const double kTolerance = epsilon * max(fabs(2 * b * b), fabs(4 * a * c));
      

      Recommendation is to use std::abs instead.

            Assignee:
            Siyuan Zhou
            Reporter:
            Tyler Brock (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: