SERVER-15183 suppress warning about fabs value truncation